# fractran_rs

./: Cargo.toml  LICENCE  README.md
.github/workflows/: check-and-lint.yaml  test.yaml
examples/: add.rs  multiply.rs  primegame.rs
src/: lib.rs  main.rs
