[package]
name = "fractran_rs"
version = "0.6.0"
edition = "2021"
authors = ["Robert Spencer <me@robertandrewspencer.com"]
description = "A FRACTRAN interpreter"
readme = "README.md"
repository = "https://github.com/rspencer01/fractran_rs"
licence = "MIT"
keywords = ["fractran", "esolang"]
category = ["mathematics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
