[package]
name = "fractran_rs"
version = "0.6.1"
edition = "2021"
authors = ["Robert Spencer <me@robertandrewspencer.com"]
description = "A FRACTRAN interpreter"
readme = "README.md"
repository = "https://github.com/rspencer01/fractran_rs"
license-file = "LICENCE"
keywords = ["fractran", "esolang"]
categories = ["mathematics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
